[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-intboolswitch"
version = "1.0.0"
description = "ComfyUI custom node for switching integer values based on boolean conditions"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["comfyui", "custom-node", "switch", "boolean", "integer"]

[project.urls]
Homepage = "https://github.com/[your-username]/ComfyUI-IntBoolSwitch"
Repository = "https://github.com/[your-username]/ComfyUI-IntBoolSwitch.git"
Issues = "https://github.com/[your-username]/ComfyUI-IntBoolSwitch/issues"